--- a/01_credit_risk_walkthrough.ipynb
+++ b/01_credit_risk_walkthrough.ipynb
@@ -1,60 +1,201 @@
-
-# Credit Risk Prediction Walkthrough
-
-This notebook demonstrates a full ML workflow on a credit-risk dataset using scikit-learn.
-
-1️⃣ **Load data**
-```python
-import pandas as pd, seaborn as sns, matplotlib.pyplot as plt
-df = pd.read_csv("../data/credit_risk.csv")
-df.head()
-```
-
-2️⃣ **EDA**
-```python
-sns.pairplot(df, hue="default")
-sns.heatmap(df.corr(), annot=True, cmap="coolwarm")
-```
-
-3️⃣ **Model training**
-```python
-from src.features import build_preprocessor
-from src.models import model_candidates
-from sklearn.pipeline import Pipeline
-
-X = df.drop(columns=["default"])
-y = df["default"]
-pre = build_preprocessor(X)
-model = model_candidates()
-pipe = Pipeline([("pre", pre), ("model", model)])
-pipe.fit(X, y)
-```
-
-4️⃣ **Evaluation**
-```python
-from sklearn.metrics import roc_curve, auc, classification_report
-import matplotlib.pyplot as plt
-y_pred = pipe.predict(X)
-print(classification_report(y, y_pred))
-fpr, tpr, _ = roc_curve(y, pipe.predict_proba(X)[:,1])
-plt.plot(fpr, tpr)
-plt.title(f"ROC AUC={auc(fpr,tpr):.2f}")
-plt.savefig("../reports/roc_curve.png")
-```
-
-5️⃣ **Explainability**
-```python
-import shap
-shap.initjs()
-explainer = shap.Explainer(pipe.named_steps["model"], feature_names=pipe.named_steps["pre"].get_feature_names_out())
-X_trans = pipe.named_steps["pre"].transform(X)
-shap_values = explainer(X_trans)
-shap.summary_plot(shap_values, X_trans, show=False)
-plt.savefig("../reports/shap_summary.png", bbox_inches="tight")
-```
-
-6️⃣ **Save model**
-```python
-from joblib import dump
-dump(pipe, "../models/credit_risk.joblib")
-```
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "f8f68f45",
+   "metadata": {},
+   "source": [
+    "# Credit Risk Prediction Walkthrough\n",
+    "\n",
+    "End-to-end classic ML on a small credit-risk dataset using scikit-learn, Optuna, and SHAP."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "627a7027",
+   "metadata": {},
+   "source": [
+    "## 1️⃣ Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a4194af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "df = pd.read_csv(\"../data/credit_risk.csv\")\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd1cec62",
+   "metadata": {},
+   "source": [
+    "## 2️⃣ Exploratory Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35340ddd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "sns.pairplot(df, hue=\"default\")\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=(6,4))\n",
+    "sns.heatmap(df.corr(numeric_only=True), annot=True, cmap=\"coolwarm\")\n",
+    "plt.title(\"Feature correlations\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afa457af",
+   "metadata": {},
+   "source": [
+    "## 3️⃣ Train a simple pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45d6d717",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from src.features import build_preprocessor\n",
+    "from src.models import model_candidates\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "X = df.drop(columns=[\"default\"])\n",
+    "y = df[\"default\"]\n",
+    "\n",
+    "pre = build_preprocessor(X)\n",
+    "model = model_candidates()  # default RF candidate\n",
+    "pipe = Pipeline([(\"pre\", pre), (\"model\", model)])\n",
+    "pipe.fit(X, y)\n",
+    "\n",
+    "pipe\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a86271b4",
+   "metadata": {},
+   "source": [
+    "## 4️⃣ Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "283e09e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from sklearn.metrics import classification_report, roc_curve, auc\n",
+    "\n",
+    "y_pred = pipe.predict(X)\n",
+    "print(classification_report(y, y_pred))\n",
+    "\n",
+    "if hasattr(pipe.named_steps[\"model\"], \"predict_proba\"):\n",
+    "    y_proba = pipe.predict_proba(X)[:,1]\n",
+    "    fpr, tpr, _ = roc_curve(y, y_proba)\n",
+    "    plt.figure(figsize=(5,4))\n",
+    "    plt.plot(fpr, tpr, label=f\"AUC={auc(fpr,tpr):.2f}\")\n",
+    "    plt.plot([0,1],[0,1],'--', alpha=0.5)\n",
+    "    plt.xlabel(\"FPR\"); plt.ylabel(\"TPR\"); plt.title(\"ROC Curve\"); plt.legend()\n",
+    "    plt.savefig(\"../reports/roc_curve.png\", bbox_inches=\"tight\")\n",
+    "    plt.show()\n",
+    "else:\n",
+    "    print(\"Model has no predict_proba; skipping ROC.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20377a68",
+   "metadata": {},
+   "source": [
+    "## 5️⃣ Explainability with SHAP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33047859",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import shap, numpy as np\n",
+    "\n",
+    "# Try tree SHAP when possible, fallback to KernelExplainer\n",
+    "try:\n",
+    "    feature_names = pipe.named_steps[\"pre\"].get_feature_names_out()\n",
+    "    X_trans = pipe.named_steps[\"pre\"].transform(X)\n",
+    "    model = pipe.named_steps[\"model\"]\n",
+    "    try:\n",
+    "        explainer = shap.TreeExplainer(model)\n",
+    "        shap_values = explainer.shap_values(X_trans)\n",
+    "        shap.summary_plot(shap_values[1] if isinstance(shap_values, list) else shap_values, X_trans, feature_names=feature_names, show=False)\n",
+    "    except Exception:\n",
+    "        explainer = shap.KernelExplainer(model.predict_proba, X_trans[:20])\n",
+    "        shap_values = explainer.shap_values(X_trans[:5])\n",
+    "        shap.summary_plot(shap_values[1], X_trans[:5], feature_names=feature_names, show=False)\n",
+    "    plt.savefig(\"../reports/shap_summary.png\", bbox_inches=\"tight\")\n",
+    "    plt.show()\n",
+    "except Exception as e:\n",
+    "    print(\"SHAP skipped:\", e)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70118481",
+   "metadata": {},
+   "source": [
+    "## 6️⃣ Save model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7891b526",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from joblib import dump\n",
+    "import os\n",
+    "os.makedirs(\"../models\", exist_ok=True)\n",
+    "dump(pipe, \"../models/credit_risk.joblib\")\n",
+    "print(\"Saved to ../models/credit_risk.joblib\")\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.x"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
